data preprocessing add to README

--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Summary: Our dataset has 13772 respondents and 374 features with a lot of empty entries. If we drop na, there is simply nothing left."
+    "#### Summary: Our dataset has 13772 observations and 374 features with a lot of empty entries. If we drop na, there is simply nothing left."
    ]
   }
  ],
