Dietary correlation explanation added

--- a/correlation_dietary.ipynb
+++ b/correlation_dietary.ipynb
@@ -2194,6 +2194,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DSQTFA: Folic acid (mcg)\n",
+    "DSQTFDFE: Folate, DFE (mcg)g\n",
+    "\n",
+    "Same meaning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
@@ -2225,6 +2235,16 @@
     "ax.set_ylabel('DSQTCARB')\n",
     "ax.legend(facecolor='white')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DSQTKCAL: Energy (kcal)\n",
+    "DSQTCARB: Carbohydrate (gm)\n",
+    "\n",
+    "Carbohydrate takes up a great amount of energy intake, so these are highly correlated."
    ]
   },
   {
@@ -2261,6 +2281,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DSQTMFAT: Total monosaturated fatty acids (gm)\n",
+    "DSQTPFAT: Total polyunsaturated fatty acids (gm)\n",
+    "\n",
+    "Food contain high monosaturated fatty acids tends to also have high polyunsaturated fatty acids, such as vegetable oils."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
@@ -2290,6 +2320,16 @@
     "ax.set_ylabel('DSQTCHOL')\n",
     "ax.legend(facecolor='white')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DSQTPROT: Protein (gm)\n",
+    "DSQTCHOL: Cholesterol (mg)\n",
+    "\n",
+    "Many food with high protein also has high cholesterol."
    ]
   },
   {
@@ -2323,6 +2363,16 @@
     "ax.set_ylabel('DSQTPROT')\n",
     "ax.legend(facecolor='white')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DSQTKCAL: Energy (kcal)\n",
+    "DSQTPROT: Protein (gm)\n",
+    "\n",
+    "People who takes in a lot of energy also tend to take in a lot of protein. (Energy and total fat only has 0.525 corr)"
    ]
   },
   {
