ameya : Changes for dental data in data_preprocess

--- a/modelling.py.ipynb
+++ b/modelling.py.ipynb
@@ -155,8 +155,8 @@
     },
     {
      "data": {
-      "text/plain": "       ANTERIOR_TOOTH_COUNT  POSTERIOR_TOOTH_COUNT  TOTAL_TOOTH_COUNT  \\\ncount          12755.000000           12755.000000       12755.000000   \nmean              10.838887              12.500274          23.339161   \nstd                2.983751               5.144294           7.532621   \nmin                0.000000               0.000000           0.000000   \n25%               12.000000               9.000000          20.000000   \n50%               12.000000              14.000000          26.000000   \n75%               12.000000              16.000000          28.000000   \nmax               12.000000              20.000000          32.000000   \n\n       ANTERIOR_CARIES_COUNT  POSTERIOR_CARIES_COUNT  TOTAL_CARIES_COUNT  \\\ncount           11679.000000             9800.000000         8954.000000   \nmean                1.704512                8.128061           10.021778   \nstd                 3.362081                5.672494            8.510732   \nmin                 0.000000                0.000000            0.000000   \n25%                 0.000000                3.000000            3.000000   \n50%                 0.000000                8.000000            8.000000   \n75%                 2.000000               14.000000           15.000000   \nmax                12.000000               16.000000           28.000000   \n\n       ANTERIOR_DENTAL_SEALANT_COUNT  POSTERIOR_DENTAL_SEALANT_COUNT  \\\ncount                    2991.000000                     1607.000000   \nmean                        0.004346                        1.669571   \nstd                         0.087598                        3.059756   \nmin                         0.000000                        0.000000   \n25%                         0.000000                        0.000000   \n50%                         0.000000                        0.000000   \n75%                         0.000000                        2.000000   \nmax                         2.000000                       16.000000   \n\n       TOTAL_SEALANT_COUNT  ROOT_CARIES  OTHER_NON_CARIOUS_ROOT_LESION  \\\ncount          1587.000000  8001.000000                    7999.000000   \nmean              1.686200     0.179353                       0.240280   \nstd               3.086166     0.420064                       0.503822   \nmin               0.000000     0.000000                       0.000000   \n25%               0.000000     0.000000                       0.000000   \n50%               0.000000     0.000000                       0.000000   \n75%               2.000000     0.000000                       0.000000   \nmax              18.000000     2.000000                       2.000000   \n\n       ANTERIOR_SIMPLE_01  POSTERIOR_SIMPLE_01  TOTAL_SIMPLE_01  \ncount        12755.000000         12755.000000     12755.000000  \nmean             0.392552             0.693375         0.712270  \nstd              0.488338             0.461110         0.452722  \nmin              0.000000             0.000000         0.000000  \n25%              0.000000             0.000000         0.000000  \n50%              0.000000             1.000000         1.000000  \n75%              1.000000             1.000000         1.000000  \nmax              1.000000             1.000000         1.000000  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ANTERIOR_TOOTH_COUNT</th>\n      <th>POSTERIOR_TOOTH_COUNT</th>\n      <th>TOTAL_TOOTH_COUNT</th>\n      <th>ANTERIOR_CARIES_COUNT</th>\n      <th>POSTERIOR_CARIES_COUNT</th>\n      <th>TOTAL_CARIES_COUNT</th>\n      <th>ANTERIOR_DENTAL_SEALANT_COUNT</th>\n      <th>POSTERIOR_DENTAL_SEALANT_COUNT</th>\n      <th>TOTAL_SEALANT_COUNT</th>\n      <th>ROOT_CARIES</th>\n      <th>OTHER_NON_CARIOUS_ROOT_LESION</th>\n      <th>ANTERIOR_SIMPLE_01</th>\n      <th>POSTERIOR_SIMPLE_01</th>\n      <th>TOTAL_SIMPLE_01</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>12755.000000</td>\n      <td>12755.000000</td>\n      <td>12755.000000</td>\n      <td>11679.000000</td>\n      <td>9800.000000</td>\n      <td>8954.000000</td>\n      <td>2991.000000</td>\n      <td>1607.000000</td>\n      <td>1587.000000</td>\n      <td>8001.000000</td>\n      <td>7999.000000</td>\n      <td>12755.000000</td>\n      <td>12755.000000</td>\n      <td>12755.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>10.838887</td>\n      <td>12.500274</td>\n      <td>23.339161</td>\n      <td>1.704512</td>\n      <td>8.128061</td>\n      <td>10.021778</td>\n      <td>0.004346</td>\n      <td>1.669571</td>\n      <td>1.686200</td>\n      <td>0.179353</td>\n      <td>0.240280</td>\n      <td>0.392552</td>\n      <td>0.693375</td>\n      <td>0.712270</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>2.983751</td>\n      <td>5.144294</td>\n      <td>7.532621</td>\n      <td>3.362081</td>\n      <td>5.672494</td>\n      <td>8.510732</td>\n      <td>0.087598</td>\n      <td>3.059756</td>\n      <td>3.086166</td>\n      <td>0.420064</td>\n      <td>0.503822</td>\n      <td>0.488338</td>\n      <td>0.461110</td>\n      <td>0.452722</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>12.000000</td>\n      <td>9.000000</td>\n      <td>20.000000</td>\n      <td>0.000000</td>\n      <td>3.000000</td>\n      <td>3.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>12.000000</td>\n      <td>14.000000</td>\n      <td>26.000000</td>\n      <td>0.000000</td>\n      <td>8.000000</td>\n      <td>8.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>12.000000</td>\n      <td>16.000000</td>\n      <td>28.000000</td>\n      <td>2.000000</td>\n      <td>14.000000</td>\n      <td>15.000000</td>\n      <td>0.000000</td>\n      <td>2.000000</td>\n      <td>2.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>12.000000</td>\n      <td>20.000000</td>\n      <td>32.000000</td>\n      <td>12.000000</td>\n      <td>16.000000</td>\n      <td>28.000000</td>\n      <td>2.000000</td>\n      <td>16.000000</td>\n      <td>18.000000</td>\n      <td>2.000000</td>\n      <td>2.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "       ANTERIOR_TOOTH_COUNT  POSTERIOR_TOOTH_COUNT  TOTAL_TOOTH_COUNT  \\\ncount          12755.000000           12755.000000       12755.000000   \nmean              10.838887              12.500274          23.339161   \nstd                2.983751               5.144294           7.532621   \nmin                0.000000               0.000000           0.000000   \n25%               12.000000               9.000000          20.000000   \n50%               12.000000              14.000000          26.000000   \n75%               12.000000              16.000000          28.000000   \nmax               12.000000              20.000000          32.000000   \n\n       ANTERIOR_CARIES_COUNT  POSTERIOR_CARIES_COUNT  TOTAL_CARIES_COUNT  \\\ncount           11679.000000             9800.000000         8954.000000   \nmean                1.704512                8.128061           10.021778   \nstd                 3.362081                5.672494            8.510732   \nmin                 0.000000                0.000000            0.000000   \n25%                 0.000000                3.000000            3.000000   \n50%                 0.000000                8.000000            8.000000   \n75%                 2.000000               14.000000           15.000000   \nmax                12.000000               16.000000           28.000000   \n\n       ANTERIOR_DENTAL_SEALANT_COUNT  POSTERIOR_DENTAL_SEALANT_COUNT  \\\ncount                    2991.000000                     1607.000000   \nmean                        0.004346                        1.669571   \nstd                         0.087598                        3.059756   \nmin                         0.000000                        0.000000   \n25%                         0.000000                        0.000000   \n50%                         0.000000                        0.000000   \n75%                         0.000000                        2.000000   \nmax                         2.000000                       16.000000   \n\n       TOTAL_SEALANT_COUNT  ROOT_CARIES  OTHER_NON_CARIOUS_ROOT_LESION  \\\ncount          1587.000000  8001.000000                    7999.000000   \nmean              1.686200     0.179353                       0.240280   \nstd               3.086166     0.420064                       0.503822   \nmin               0.000000     0.000000                       0.000000   \n25%               0.000000     0.000000                       0.000000   \n50%               0.000000     0.000000                       0.000000   \n75%               2.000000     0.000000                       0.000000   \nmax              18.000000     2.000000                       2.000000   \n\n       ANTERIOR_SIMPLE_01  POSTERIOR_SIMPLE_01  TOTAL_SIMPLE_01    SERIOUS_01  \ncount        12755.000000         12755.000000     12755.000000  12755.000000  \nmean             0.392552             0.693375         0.712270      0.475186  \nstd              0.488338             0.461110         0.452722      0.499403  \nmin              0.000000             0.000000         0.000000      0.000000  \n25%              0.000000             0.000000         0.000000      0.000000  \n50%              0.000000             1.000000         1.000000      0.000000  \n75%              1.000000             1.000000         1.000000      1.000000  \nmax              1.000000             1.000000         1.000000      1.000000  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ANTERIOR_TOOTH_COUNT</th>\n      <th>POSTERIOR_TOOTH_COUNT</th>\n      <th>TOTAL_TOOTH_COUNT</th>\n      <th>ANTERIOR_CARIES_COUNT</th>\n      <th>POSTERIOR_CARIES_COUNT</th>\n      <th>TOTAL_CARIES_COUNT</th>\n      <th>ANTERIOR_DENTAL_SEALANT_COUNT</th>\n      <th>POSTERIOR_DENTAL_SEALANT_COUNT</th>\n      <th>TOTAL_SEALANT_COUNT</th>\n      <th>ROOT_CARIES</th>\n      <th>OTHER_NON_CARIOUS_ROOT_LESION</th>\n      <th>ANTERIOR_SIMPLE_01</th>\n      <th>POSTERIOR_SIMPLE_01</th>\n      <th>TOTAL_SIMPLE_01</th>\n      <th>SERIOUS_01</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>12755.000000</td>\n      <td>12755.000000</td>\n      <td>12755.000000</td>\n      <td>11679.000000</td>\n      <td>9800.000000</td>\n      <td>8954.000000</td>\n      <td>2991.000000</td>\n      <td>1607.000000</td>\n      <td>1587.000000</td>\n      <td>8001.000000</td>\n      <td>7999.000000</td>\n      <td>12755.000000</td>\n      <td>12755.000000</td>\n      <td>12755.000000</td>\n      <td>12755.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>10.838887</td>\n      <td>12.500274</td>\n      <td>23.339161</td>\n      <td>1.704512</td>\n      <td>8.128061</td>\n      <td>10.021778</td>\n      <td>0.004346</td>\n      <td>1.669571</td>\n      <td>1.686200</td>\n      <td>0.179353</td>\n      <td>0.240280</td>\n      <td>0.392552</td>\n      <td>0.693375</td>\n      <td>0.712270</td>\n      <td>0.475186</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>2.983751</td>\n      <td>5.144294</td>\n      <td>7.532621</td>\n      <td>3.362081</td>\n      <td>5.672494</td>\n      <td>8.510732</td>\n      <td>0.087598</td>\n      <td>3.059756</td>\n      <td>3.086166</td>\n      <td>0.420064</td>\n      <td>0.503822</td>\n      <td>0.488338</td>\n      <td>0.461110</td>\n      <td>0.452722</td>\n      <td>0.499403</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>12.000000</td>\n      <td>9.000000</td>\n      <td>20.000000</td>\n      <td>0.000000</td>\n      <td>3.000000</td>\n      <td>3.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>12.000000</td>\n      <td>14.000000</td>\n      <td>26.000000</td>\n      <td>0.000000</td>\n      <td>8.000000</td>\n      <td>8.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>12.000000</td>\n      <td>16.000000</td>\n      <td>28.000000</td>\n      <td>2.000000</td>\n      <td>14.000000</td>\n      <td>15.000000</td>\n      <td>0.000000</td>\n      <td>2.000000</td>\n      <td>2.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>12.000000</td>\n      <td>20.000000</td>\n      <td>32.000000</td>\n      <td>12.000000</td>\n      <td>16.000000</td>\n      <td>28.000000</td>\n      <td>2.000000</td>\n      <td>16.000000</td>\n      <td>18.000000</td>\n      <td>2.000000</td>\n      <td>2.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 1,
      "metadata": {},
@@ -203,13 +203,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:ylabel='Frequency'>"
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -231,13 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:ylabel='Frequency'>"
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -259,13 +259,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:ylabel='Frequency'>"
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -287,13 +287,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:ylabel='Frequency'>"
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -315,25 +315,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
-   "source": [
-    "from preprocess_dental import get_serious_01_label\n",
-    "data['SERIOUS_01'] = data.apply(get_serious_01_label, axis=1)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:ylabel='Frequency'>"
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -355,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [],
    "metadata": {
